--- a/package.json
+++ b/package.json
@@ -47,7 +47,10 @@
     ]
   },
   "dependencies": {
-    "angular": "^1.6.3",
+    "angular": "^1.6.4",
+    "angular-animate": "^1.6.4",
+    "angular-aria": "^1.6.4",
+    "angular-material": "^1.1.3",
     "normalize.css": "^6.0.0"
   }
 }
